force-app/main/default/objects/Account__c/Account__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Business Logic Configuration</label>
</CustomObject>