force-app/main/default/objects/Account__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>