force-app/main/default/objects/Account__c/fields/Contact_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Contact_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Trigger</label>
    <type>Checkbox</type>
</CustomField>