force-app/main/default/objects/Account__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>